# AutoVision

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  PROJECT_SUMMARY.md  README.md  behaviour_planner.py  cameraprocess.py  config.py  config.yaml  controller.py  env_linux.yml  from_video.py  helpers.py  main-realisense.py  main.py  main_old.py  main_old_architecture.py  main_rust.py  mockcameraprocess.py  multiprocessing_manager.py  process_pipeline_manager.py  ripc-0.2.0-cp312-cp312-manylinux_2_34_x86_64.whl  road_info.py  take_shots.py  test.py  testest.py  videoreaderprocess.py
config/: roi.json
configuration/: config.py
control/: controller.py
controllers/: behaviour_planner.py  controller.py  pid_controller.py
filters/: base_filter.py  draw_filter.py  heading_error_filter.py  instance_segmentation_filter.py  lane_detect_filter.py  object_detect_filter.py  roi_filter.py  visualizer.py
frontend/: package-lock.json  package.json
helpers/: controlled_process.py  from_video.py  helpers.py  shared_memory.py  timer.py  timerv2.py  timing_info.py  timingvisualizer.py  visualize_data.py
laneDetect/: main.py
localizationSystem/: main.py
objects/: pipe_data.py  sequential_filter_process.py  video_info.py
perception/: helpers.py  visualize_data.py
planning/: behaviour_planner.py
processes/: control_process.py  controlled_process.py  mock_camera_process.py  multiprocessing_manager.py  multiprocessing_manager_rust_ui.py  timing_manager_process.py  (+2 more)
rs_ui/: Cargo.toml  test.py
rs_ui/src/: decoder.rs  grid.rs  image_decoder.rs  image_reader.rs  main.rs
(+99 files in other folders)
